macro/derive/tests/from_variant/02-double-from.stderr
error[E0119]: conflicting implementations of trait `std::convert::From<Variant1>` for type `Enum`
  --> tests/from_variant/01-big-enum.rs:11:10
   |
11 | #[derive(iroha_derive::FromVariant)]
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Enum`
   |
  ::: tests/from_variant/02-double-from.rs:3:1
   |
3  | impl std::convert::From<Variant1> for Enum {
   | ------------------------------------------ first implementation here
   |
   = note: this error originates in the derive macro `iroha_derive::FromVariant` (in Nightly builds, run with -Z macro-backtrace for more info)
